--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "dev": "concurrently --kill-others \"npm run start-client-dev\" \"npm run start-server-dev\"",
     "build-client": "cross-env BUILD_PATH=builds/client react-scripts --openssl-legacy-provider build",
     "build-server": "cd src && cd server && tsc --build",
-    "build": "react-scripts --openssl-legacy-provider build",
+    "build": "npm run build-client && npm run build-server",
     "start-server": "node ./builds/server/server/server.js",
     "start-server-local": "concurrently \"npm run start-server\" \"start http://localhost:8000\"",
     "start-local": "npm install && npm run build && npm run start-server-local",
